syntax = "proto3";

package cn.v5cn.netty.ws.pb.generate;

option java_multiple_files = true;
option java_package = "cn.v5cn.netty.ws.pb.core.entity";
option java_outer_classname = "ChatWrapper";

message ChatMsg {
  //协议版本号。第一版本：1，以此类推。
  int32 version = 1;
  //消息id
  int64 id = 2;
  //接收者类型。
  DestType destType = 3;
  //发送者userId
  string fromId = 4;
  //接收者userId
  string destId = 5;
  //发送时间
  int64 createTime = 6;
  //消息类型
  MsgType msgType = 7;
  //消息体，json，格式由消息类型决定
  bytes msgBody = 8;

  optional string addition = 32;

  enum DestType {
    SINGLE = 0;
    GROUP = 1;
  }

  enum MsgType {
    TEXT = 0;
    FILE = 1;
  }
}

message TextBody {
  // 文字内容
  string text = 1;
}

message FileBody {
  // 媒体文件上传得到的KEY,用于生成下载URL
  string fileId = 1;
  // 文件的CRC32校验码
  int32 media_crc32 = 2;
  // 文件大小（字节数）
  int32 fSize = 3;
  // 文件名称
  string fName = 4;
}